--- a/galasa-parent/dev.galasa.framework.api/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api/build.gradle
@@ -10,5 +10,6 @@ dependencies {
 
     implementation 'org.osgi:org.osgi.service.cm:1.6.0'
     implementation 'org.apache.felix:org.apache.felix.bundlerepository:2.0.2'
+    implementation 'commons-logging:commons-logging:1.2'
 
 }
