--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -10,6 +10,7 @@ pluginManagement {
 rootProject.name = "galasa-parent"
 
 include 'dev.galasa'
+include 'dev.galasa.framework.log4j2.bridge'
 include 'dev.galasa.framework.maven.repository.spi'
 include 'dev.galasa.framework.maven.repository'
 include 'dev.galasa.framework'
