--- a/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
@@ -10,4 +10,5 @@ dependencies {
     implementation 'javax.servlet:javax.servlet-api:3.1.0'
     implementation 'com.auth0:java-jwt:3.8.1'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'commons-logging:commons-logging:1.2'
 }
