--- a/galasa-parent/dev.galasa.framework.api.bootstrap/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.bootstrap/build.gradle
@@ -8,6 +8,7 @@ dependencies {
 
     implementation project(':dev.galasa.framework')
     
+    implementation 'commons-logging:commons-logging:1.2'
     implementation 'javax.servlet:javax.servlet-api:3.1.0'
     implementation 'io.prometheus:simpleclient:0.6.0'
 
