--- a/galasa-parent/dev.galasa.framework.api.testcatalog/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.testcatalog/build.gradle
@@ -9,6 +9,7 @@ version = "0.16.0"
 dependencies {
     implementation project(':dev.galasa.framework')
     
+    implementation 'commons-logging:commons-logging:1.2'
     implementation 'javax.servlet:javax.servlet-api:3.1.0'
     implementation 'commons-io:commons-io:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.5'
