--- a/galasa-parent/dev.galasa.framework.k8s.controller/build.gradle
+++ b/galasa-parent/dev.galasa.framework.k8s.controller/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation project(':dev.galasa')
     implementation project(':dev.galasa.framework')
     
+    implementation 'commons-logging:commons-logging:1.2'
     implementation 'commons-codec:commons-codec:1.15'
 
     implementation 'io.prometheus:simpleclient:0.6.0'
