--- a/galasa-parent/dev.galasa.framework.resource.management/build.gradle
+++ b/galasa-parent/dev.galasa.framework.resource.management/build.gradle
@@ -7,6 +7,7 @@ description = 'Galasa Resource Management'
 dependencies {
     implementation project (':dev.galasa.framework')
     
+    implementation 'commons-logging:commons-logging:1.2'
     implementation 'io.prometheus:simpleclient:0.6.0'
     implementation 'io.prometheus:simpleclient_httpserver:0.6.0'
     implementation 'io.prometheus:simpleclient_hotspot:0.6.0'
