--- a/galasa-parent/dev.galasa.framework.obr/pom.xml
+++ b/galasa-parent/dev.galasa.framework.obr/pom.xml
@@ -105,7 +105,7 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.api.webui</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.17.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
