--- a/galasa-parent/gradle.properties
+++ b/galasa-parent/gradle.properties
@@ -7,6 +7,6 @@ galasaTargetCompatibility=1.8
 isRelease=false
 
 
-sourceMaven=https://repo.maven.apache.org/maven2/
+sourceMaven=https://cicscit.hursley.ibm.com/galasadev/main/maven/maven/
 centralMaven=https://repo.maven.apache.org/maven2/
 targetMaven=https://repo.maven.apache.org/maven2/
