Worklist CRUD services (#290)
* Start of Worklist get servlet

Signed-off-by: Jade Carino <jade.carino@ibm.com>

* Worklist GET request

Signed-off-by: Jade Carino <jade.carino@ibm.com>

* Worklist servlets

Signed-off-by: Jade Carino <jade.carino@ibm.com>

* Improvements to Worklist servlets

Signed-off-by: Jade Carino <jade.carino@ibm.com>

* Worklist improvements

Signed-off-by: Jade Carino <jade.carino@ibm.com>

* Worklist improvements

Signed-off-by: Jade Carino <jade.carino@ibm.com>

--- a/galasa-parent/dev.galasa.framework.obr/pom.xml
+++ b/galasa-parent/dev.galasa.framework.obr/pom.xml
@@ -104,6 +104,12 @@
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
+			<artifactId>dev.galasa.framework.api.webui</artifactId>
+			<version>0.17.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.api.testcatalog</artifactId>
 			<version>0.15.0</version>
 			<scope>compile</scope>
