--- a/galasa-parent/dev.galasa.framework.api.webui/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.webui/build.gradle
@@ -5,9 +5,13 @@ plugins {
 
 description = 'Galasa Web UI API'
 
+version '0.17.0'
+
 dependencies {
 
     implementation project(':dev.galasa.framework')
+    implementation 'javax.servlet:javax.servlet-api:3.1.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 }
 
