--- a/galasa-parent/dev.galasa.framework.api.webui/pom.xml
+++ b/galasa-parent/dev.galasa.framework.api.webui/pom.xml
@@ -8,7 +8,7 @@
 		<version>0.15.0</version>
 	</parent>
 	<artifactId>dev.galasa.framework.api.webui</artifactId>
-	<version>0.15.0</version>
+	<version>0.17.0</version>
 	<packaging>bundle</packaging>
 	<dependencies>
 		<dependency>
@@ -22,6 +22,17 @@
 			<artifactId>dev.galasa.framework</artifactId>
 			<version>0.15.0</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
 		</dependency>
         </dependencies>
 </project>
