--- a/galasa-parent/dev.galasa.framework.api.runs/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.runs/build.gradle
@@ -5,6 +5,8 @@ plugins {
 
 description = 'Galasa Runs API'
 
+version = '0.17.0'
+
 dependencies {
     implementation project(':dev.galasa.framework')
     
