--- a/galasa-parent/dev.galasa/build.gradle
+++ b/galasa-parent/dev.galasa/build.gradle
@@ -2,4 +2,6 @@ plugins {
     id 'biz.aQute.bnd.builder' version '5.3.0'
 }
 
+version = '0.17.0'
+
 description = 'Galasa Testers Programmer Interface (TPI)'
