Changed gradle conventions
Signed-off-by: James Davies <jdavies47@hotmail.co.uk>

--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -1,166 +1,13 @@
 plugins {
+    id 'biz.aQute.bnd.builder' version '5.3.0' apply false
     id 'dev.galasa.githash' version '0.15.0' apply false
 }
 
-subprojects {
+version = '0.15.0'
 
-    apply plugin: 'java-library'
-    apply plugin: 'maven-publish'
-    apply plugin: 'signing'
-    apply plugin: 'dev.galasa.githash'
-
-    hashes {
-        gitHash = System.getenv('GIT_COMMIT')
-    }
-
-    group = galasaGroup
-
-    // If a subproject/bundle holds a different version to the root project,
-    // <bundle>/gradle.properties should be given the property "bundleVersion"
-    // e.g. bundleVersion=0.1.1
-    if (project.hasProperty('bundleVersion')){
-        version = bundleVersion
-    } else {
-        version = galasaVersion
-    }
-
-    // JDK compatibility
-    sourceCompatibility = galasaSourceCompatibility
-    targetCompatibility = galasaTargetCompatibility
-
-    signing {
-        sign publishing.publications
-    }
-
-    tasks.withType(Sign) {
-        onlyIf { isRelease.toBoolean() }
-    }
-
-    
-    tasks.withType(PublishToMavenRepository) {
-        onlyIf { jar.didWork }
-    }
-
-    java {
-        withJavadocJar()
-        withSourcesJar()
-    }
-    
-    tasks.withType(Javadoc) {
-        failOnError = false
-    }
-
-    repositories {
-        maven {
-            url "$sourceMaven"
-        }
-        maven {
-            url "$centralMaven"
-        }
-    }
-
-    publishing {
-        publications {
-            maven(MavenPublication) {
-                from components.java
-                
-                pom {
-                    name = 'A Galasa project'
-                    description = 'A Galasa project'
-                    url = 'https://galasa.dev'
-                    licenses {
-                        license {
-                            name = 'Eclipse Public License - v 2.0'
-                            url = 'https://www.eclipse.org/legal/epl-2.0/t'
-                        }
-                    }
-                    developers {
-                        developer {
-                            name = 'Michael Baylis'
-                            email = 'Michael.Baylis@uk.ibm.com'
-                            organization = 'IBM'
-                            organizationUrl = 'https://www.ibm.com'
-                        }
-                        developer {
-                            name = 'William Yates'
-                            email = 'wyates@uk.ibm.com'
-                            organization = 'IBM'
-                            organizationUrl = 'https://www.ibm.com'
-                        }
-                        developer {
-                            name = 'David Roberts'
-                            email = 'david.roberts@uk.ibm.com'
-                            organization = 'IBM'
-                            organizationUrl = 'https://www.ibm.com'
-                        }
-                        developer {
-                            name = 'James Davies'
-                            email = 'james.davies@ibm.com'
-                            organization = 'IBM'
-                            organizationUrl = 'https://www.ibm.com'
-                        }
-                        developer {
-                            name = 'Matthew Chivers'
-                            email = 'matthew.chivers@ibm.com'
-                            organization = 'IBM'
-                            organizationUrl = 'https://www.ibm.com'
-                        }
-                        developer {
-                            name = 'Charlie Meek'
-                            email = 'charlie.meek@ibm.com'
-                            organization = 'IBM'
-                            organizationUrl = 'https://www.ibm.com'
-                        }
-                        developer {
-                            name = 'Diana Slepikaite'
-                            email = 'diana.slepikaite@ibm.com'
-                            organization = 'IBM'
-                            organizationUrl = 'https://www.ibm.com'
-                        }
-                        developer {
-                            name = 'Jade Carino'
-                            email = 'jade.carino@ibm.com'
-                            organization = 'IBM'
-                            organizationUrl = 'https://www.ibm.com'
-                        }
-                    }
-                    scm {
-                        connection = 'scm:git:git:://github.com/galasa-dev/framework'
-                        developerConnection = 'scm:git:git:://github.com/galasa-dev/framework'
-                        url = 'https://github.com/galasa-dev/framework'
-                    }
-                    issueManagement {
-                        system = 'GitHub'
-                        url = 'https://github.com/galasa-dev/projectmanagement/issues'
-                    }
-                }
-            }
-        }
-        repositories {
-            maven {
-                url  = "$targetMaven"
-            
-                if ("$targetMaven".startsWith('http')) {
-                    credentials {
-                        username System.getenv('MAVENUSERNAME')
-                        password System.getenv('MAVENPASSWORD')
-                    }
-                }
-            }
-        }
-    }
-
-    dependencies {
-
-        implementation 'org.osgi:org.osgi.core:6.0.0'
-        implementation 'org.osgi:org.osgi.service.component.annotations:1.3.0'
-        implementation 'javax.validation:validation-api:2.0.1.Final'
-        
-        testImplementation 'junit:junit:4.13.1'
-        testImplementation 'org.mockito:mockito-core:3.1.0'
-        testImplementation 'org.awaitility:awaitility:3.0.0'
-        testImplementation 'org.assertj:assertj-core:3.16.1'
-
-    }
-
+task clean {
+   // make sure the build directory is gone 
+   doFirst {
+      delete "${buildDir}"
+   }
 }
