--- a/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'biz.aQute.bnd.builder' version '5.3.0'
+    id 'biz.aQute.bnd.builder'
+    id 'galasa.api.server'
 }
 
 description = 'Galasa Authentication API'
@@ -7,8 +8,5 @@ description = 'Galasa Authentication API'
 dependencies {
     implementation project(':dev.galasa.framework')
     
-    implementation 'javax.servlet:javax.servlet-api:3.1.0'
     implementation 'com.auth0:java-jwt:3.8.1'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'commons-logging:commons-logging:1.2'
 }
