--- a/galasa-parent/dev.galasa.framework.api.health/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.health/build.gradle
@@ -1,13 +1,10 @@
 plugins {
-    id 'biz.aQute.bnd.builder' version '5.3.0'
+    id 'biz.aQute.bnd.builder'
+    id 'galasa.api.server'
 }
 
 description = 'Galasa API Health Servlets'
 
 dependencies {
     implementation project(':dev.galasa.framework')
-    
-    implementation 'commons-logging:commons-logging:1.2'
-    implementation 'javax.servlet:javax.servlet-api:3.1.0'
-    implementation 'io.prometheus:simpleclient:0.6.0'
 }
