--- a/galasa-parent/dev.galasa.framework.api.ras/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.ras/build.gradle
@@ -1,19 +1,15 @@
 plugins {
-    id 'biz.aQute.bnd.builder' version '5.3.0'
+    id 'biz.aQute.bnd.builder'
     id 'org.openapi.generator' version "5.0.1"
+    id 'galasa.api.server'
 }
 
 description = 'Galasa API - RAS'
 
 dependencies {
     implementation project(':dev.galasa.framework')
-    
-    implementation 'javax.servlet:javax.servlet-api:3.1.0'
-    
-    implementation 'com.google.code.gson:gson:2.8.5'
+
     implementation 'org.apache.commons:commons-collections4:4.4'
-    
-    implementation 'io.prometheus:simpleclient:0.6.0'
 }
 
 openApiGenerate {
