--- a/galasa-parent/dev.galasa.framework.k8s.controller/build.gradle
+++ b/galasa-parent/dev.galasa.framework.k8s.controller/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'biz.aQute.bnd.builder' version '5.3.0'
+    id 'biz.aQute.bnd.builder'
+    id 'galasa.framework'
 }
 
 description = 'Galasa Kubernetes Controller'
@@ -11,7 +12,6 @@ dependencies {
     implementation project(':dev.galasa')
     implementation project(':dev.galasa.framework')
     
-    implementation 'commons-logging:commons-logging:1.2'
     implementation 'commons-codec:commons-codec:1.15'
 
     implementation 'io.prometheus:simpleclient:0.6.0'
