--- a/galasa-parent/dev.galasa.framework.log4j2.bridge/build.gradle
+++ b/galasa-parent/dev.galasa.framework.log4j2.bridge/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'biz.aQute.bnd.builder' version '5.3.0'
+    id 'biz.aQute.bnd.builder'
+    id 'galasa.framework'
 }
 
 description = 'Galasa log4j2 Bridge'
