--- a/galasa-parent/dev.galasa.framework.maven.repository/build.gradle
+++ b/galasa-parent/dev.galasa.framework.maven.repository/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'biz.aQute.bnd.builder' version '5.3.0'
+    id 'biz.aQute.bnd.builder'
+    id 'galasa.framework'
 }
 
 description = 'Galasa Maven Repository '
@@ -7,7 +8,6 @@ description = 'Galasa Maven Repository '
 dependencies {
     compileOnly project(':dev.galasa.framework.maven.repository.spi')
 
-    implementation 'commons-logging:commons-logging:1.2'
     implementation 'org.apache.maven:maven-repository-metadata:3.3.9'
     implementation 'org.codehaus.plexus:plexus-utils:3.0.24'
 }
