--- a/galasa-parent/dev.galasa.framework.metrics/build.gradle
+++ b/galasa-parent/dev.galasa.framework.metrics/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'biz.aQute.bnd.builder' version '5.3.0'
+    id 'biz.aQute.bnd.builder'
+    id 'galasa.framework'
 }
 
 description = 'Galasa Metrics'
@@ -7,7 +8,6 @@ description = 'Galasa Metrics'
 dependencies {
     implementation project(':dev.galasa.framework')
 
-    implementation 'commons-logging:commons-logging:1.2'
     implementation 'io.prometheus:simpleclient:0.6.0'
     implementation 'io.prometheus:simpleclient_httpserver:0.6.0'
     implementation 'io.prometheus:simpleclient_hotspot:0.6.0'
