--- a/galasa-parent/dev.galasa.framework/build.gradle
+++ b/galasa-parent/dev.galasa.framework/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'biz.aQute.bnd.builder' version '5.3.0'
+    id 'biz.aQute.bnd.builder'
+    id 'galasa.framework'
 }
 
 description = 'Galasa Framework'
@@ -15,7 +16,6 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
     implementation 'org.apache.commons:commons-lang3:3.1'
     implementation 'org.apache.felix:org.apache.felix.bundlerepository:2.0.2'
-    implementation 'commons-logging:commons-logging:1.2'
         
     implementation 'org.apache.bcel:bcel:6.3'
     implementation 'commons-io:commons-io:2.9.0'
