--- a/galasa-parent/dev.galasa.framework.api.ras/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.ras/build.gradle
@@ -6,6 +6,8 @@ plugins {
 
 description = 'Galasa API - RAS'
 
+version '0.17.0'
+
 dependencies {
     implementation project(':dev.galasa.framework')
 
