--- a/galasa-parent/dev.galasa.framework.api.cps/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.cps/build.gradle
@@ -6,6 +6,8 @@ plugins {
 
 description = 'Galasa API - CPS'
 
+version = '0.18.0'
+
 dependencies {
     implementation project(':dev.galasa.framework')   
 }
