--- a/galasa-parent/dev.galasa.framework.metrics/build.gradle
+++ b/galasa-parent/dev.galasa.framework.metrics/build.gradle
@@ -5,6 +5,8 @@ plugins {
 
 description = 'Galasa Metrics'
 
+version = '0.18.0'
+
 dependencies {
     implementation project(':dev.galasa.framework')
 
