--- a/galasa-parent/dev.galasa.framework.resource.management/build.gradle
+++ b/galasa-parent/dev.galasa.framework.resource.management/build.gradle
@@ -5,6 +5,8 @@ plugins {
 
 description = 'Galasa Resource Management'
 
+version = '0.18.0'
+
 dependencies {
     implementation project (':dev.galasa.framework')
     
