set codecoverage flags
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/release.yaml
+++ b/release.yaml
@@ -15,49 +15,58 @@ framework:
     bom: true
     mvp: true
     javadoc: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework
     version: 0.19.0
     obr: true
     bom: true
     mvp: true
+    codecoverage: true
     
   - artifact: galasa-boot
     version: 0.19.0
     mvp: true
+    codecoverage: true
 
     
   - artifact: dev.galasa.framework.docker.controller
     version: 0.16.0
     obr: true
     isolated: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework.k8s.controller
     version: 0.16.0
     obr: true
     isolated: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework.maven.repository
     version: 0.18.0
     obr: true
     mvp: true
     isolated: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework.maven.repository.spi
     version: 0.18.0
     obr: true
     mvp: true
     isolated: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework.resource.management
     version: 0.18.0
     obr: true
     isolated: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework.metrics
     version: 0.18.0
     obr: true
     isolated: true
+    codecoverage: true
         
     
 api:
@@ -66,43 +75,52 @@ api:
     version: 0.18.0
     obr: true
     isolated: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework.api.authentication
     version: 0.18.0
     obr: true
     isolated: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework.api.bootstrap
     version: 0.18.0
     obr: true
     isolated: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework.api.cps
     version: 0.18.0
     obr: true
     isolated: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework.api.health
     version: 0.18.0
     obr: true
     isolated: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework.api.ras
     version: 0.17.0
     obr: true
     isolated: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework.api.runs
     version: 0.17.0
     obr: true
     isolated: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework.api.testcatalog
     version: 0.16.0
     obr: true
     isolated: true
+    codecoverage: true
 
   - artifact: dev.galasa.framework.api.webui
     version: 0.17.0
     obr: true
     isolated: true
+    codecoverage: true
