--- a/tekton/prun-main-framework-build.yaml
+++ b/tekton/prun-main-framework-build.yaml
@@ -17,7 +17,7 @@ spec:
   serviceAccountName: build-bot
   podTemplate:
     nodeSelector:
-      beta.kubernetes.io/arch: amd64
+      kubernetes.io/arch: amd64
       platform: hdc
     volumes:
     - name: gpggradle
@@ -33,7 +33,6 @@ spec:
   - name: git-workspace
     volumeClaimTemplate:
       spec:
-        storageClassName: rbd
         accessModes:
           - ReadWriteOnce
         resources:
