--- a/tekton/prun-main-framework-build.yaml
+++ b/tekton/prun-main-framework-build.yaml
@@ -33,6 +33,7 @@ spec:
   - name: git-workspace
     volumeClaimTemplate:
       spec:
+        storageClassName: longhorn-temp
         accessModes:
           - ReadWriteOnce
         resources:
