extract compress from docker controller and force to 1.21
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/dev.galasa.framework.docker.controller/build.gradle
+++ b/galasa-parent/dev.galasa.framework.docker.controller/build.gradle
@@ -12,6 +12,11 @@ dependencies {
     implementation project(':dev.galasa.framework')
 
     implementation 'commons-codec:commons-codec:1.15'
+    implementation ('org.apache.commons:commons-compress') {
+        version {
+            strictly '1.21'
+        }
+    }
 
     implementation 'io.prometheus:simpleclient:0.6.0'
     implementation 'io.prometheus:simpleclient_httpserver:0.6.0'
