--- a/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
@@ -10,5 +10,6 @@ version = '0.21.0'
 dependencies {
     implementation project(':dev.galasa.framework')
     
-    implementation 'com.auth0:java-jwt:3.8.1'
+    // implementation 'com.auth0:java-jwt:3.8.1'
+    implementation 'com.auth0:java-jwt:3.19.1'
 }
