--- a/galasa-parent/dev.galasa.framework.log4j2.bridge/build.gradle
+++ b/galasa-parent/dev.galasa.framework.log4j2.bridge/build.gradle
@@ -10,4 +10,5 @@ version = "0.21.0"
 dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
 }
