correct javadoc issues to limit build error output
Signed-off-by: Mike Cobbett <77053+techcobweb@users.noreply.github.com>

--- a/galasa-parent/gradle.properties
+++ b/galasa-parent/gradle.properties
@@ -1,5 +1,5 @@
 isRelease=false
 
-sourceMaven=https://cicscit.hursley.ibm.com/galasadev/main/maven/maven/
+sourceMaven=https://repo.maven.apache.org/maven2/
 centralMaven=https://repo.maven.apache.org/maven2/
 targetMaven=https://repo.maven.apache.org/maven2/
