--- a/galasa-parent/dev.galasa.framework.api.cps/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.cps/build.gradle
@@ -9,7 +9,8 @@ description = 'Galasa API - CPS'
 version = '0.25.0'
 
 dependencies {
-    implementation project(':dev.galasa.framework')   
+    implementation project(':dev.galasa.framework')
+    testImplementation 'org.assertj:assertj-core:3.23.1'
 }
 
 openApiGenerate {
