Include required deps, increase JVM memory for gradle
Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

--- a/galasa-parent/gradle.properties
+++ b/galasa-parent/gradle.properties
@@ -1,5 +1,7 @@
+org.gradle.jvmargs=-Xmx4096M
+
 isRelease=false
 
-sourceMaven=https://repo.maven.apache.org/maven2/
+sourceMaven=https://development.galasa.dev/main/maven-repo/obr/
 centralMaven=https://repo.maven.apache.org/maven2/
 targetMaven=https://repo.maven.apache.org/maven2/
