Change sourceMaven back
Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

--- a/galasa-parent/gradle.properties
+++ b/galasa-parent/gradle.properties
@@ -2,6 +2,6 @@ org.gradle.jvmargs=-Xmx4096M
 
 isRelease=false
 
-sourceMaven=https://development.galasa.dev/main/maven-repo/obr/
+sourceMaven=https://repo.maven.apache.org/maven2/
 centralMaven=https://repo.maven.apache.org/maven2/
 targetMaven=https://repo.maven.apache.org/maven2/
