--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -1,13 +1,29 @@
 plugins {
+    id 'java'
     id 'biz.aQute.bnd.builder' version '5.3.0' apply false
     id 'dev.galasa.githash' version '0.15.0' apply false
 }
 
-task clean {
-   // make sure the build directory is gone 
-   doFirst {
-      delete "${buildDir}"
-   }
+repositories {
+    gradlePluginPortal()
+    mavenCentral()
+    maven {
+        url "https://development.galasa.dev/main/maven-repo/obr/"
+    }
+    mavenLocal()
+}
+
+dependencies {
+    // We need the openapi generator to generate API documentation from the openapi.yaml file
+    // https://mvnrepository.com/artifact/org.openapitools/openapi-generator
+    compileClasspath group: 'org.openapitools', name: 'openapi-generator-cli', version: '6.0.1'
+}
+
+task downloadDependencies(type: Copy) {
+    // Download the dependencies onto the local disk.
+    from configurations.compileClasspath
+    into 'build/dependencies'
+    dependsOn configurations.compileClasspath
 }
 
 gradle.taskGraph.beforeTask { Task task ->
