--- a/galasa-parent/dev.galasa.framework/build.gradle
+++ b/galasa-parent/dev.galasa.framework/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
 
     testImplementation project (':dev.galasa')
+    testImplementation project (':galasa.framework')
 
 }
