Gradle needs to work in vscode.
Signed-off-by: Mike Cobbett <77053+techcobweb@users.noreply.github.com>

--- a/galasa-parent/dev.galasa.framework.api.ras/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.ras/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'biz.aQute.bnd.builder'
     id 'org.openapi.generator' version "5.0.1"
     id 'galasa.api.server'
+
+    // testCompile requires Java plugin.
+    id 'java'
 }
 
 description = 'Galasa API - RAS'
