--- a/galasa-parent/dev.galasa.framework.api.ras/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.ras/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
     
     testCompile 'org.apache.commons:commons-lang3:3.12.0'
+    testCompile project(':dev.galasa.framework').sourceSets.test.output
 }
 
 openApiGenerate {
