Change isRelease build arg to isMainOrRelease, and default is true
Signed-off-by: Jade Carino <carino_jade@yahoo.co.uk>

--- a/galasa-parent/buildSrc/src/main/groovy/galasa.java.gradle
+++ b/galasa-parent/buildSrc/src/main/groovy/galasa.java.gradle
@@ -33,7 +33,7 @@ signing {
 }
 
 tasks.withType(Sign) {
-    onlyIf { isRelease.toBoolean() }
+    onlyIf { isMainOrRelease.toBoolean() }
 }
 
 task gitHash(dependsOn : 'classes') {
