--- a/galasa-parent/gradle.properties
+++ b/galasa-parent/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx4096M
 
-isRelease=false
+isMainOrRelease=false
 
 sourceMaven=https://repo.maven.apache.org/maven2/
 centralMaven=https://repo.maven.apache.org/maven2/
