--- a/release.yaml
+++ b/release.yaml
@@ -76,6 +76,12 @@ api:
     obr: true
     isolated: true
     codecoverage: true
+
+  - artifact: dev.galasa.framework.api.common
+    version: 0.25.0
+    obr: true
+    isolated: true
+    codecoverage: true
     
   - artifact: dev.galasa.framework.api.authentication
     version: 0.25.0
