temporary put on hold due to OSGi issue
Signed-off-by: Mike Cobbett <77053+techcobweb@users.noreply.github.com>

--- a/galasa-parent/dev.galasa.framework.api.common/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.common/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'biz.aQute.bnd.builder'
     id 'org.openapi.generator' version "5.0.1"
-    id 'galasa.api.server'
+    // id 'galasa.api.server'
+    id 'galasa.java'
 }
 
 description = 'Galasa API - Common'
