--- a/galasa-parent/dev.galasa.framework.api.ras/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.ras/build.gradle
@@ -13,7 +13,7 @@ version '0.29.0'
 
 dependencies {
     implementation project(':dev.galasa.framework')
-
+    // implementation project(':dev.galasa.framework.api.common')
 
     implementation 'org.apache.commons:commons-collections4:4.4'
     
