--- a/galasa-parent/dev.galasa.framework.api/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api/build.gradle
@@ -15,3 +15,17 @@ dependencies {
     implementation 'org.apache.felix:org.apache.felix.bundlerepository:2.0.2'
 
 }
+
+// Note: These values are consumed by the parent build process
+// They indicate which packages of functionality this OSGi bundle should be delivered inside,
+// or referenced from.
+// The settings here are gathered together by the build process to create a release.yaml file 
+// which gathers-up all the packaging metadata about all the OSGi bundles in this component.
+ext.project_name=project.name
+ext.include_in_obr          = true
+ext.include_in_mvp          = false
+ext.include_in_isolated     = true
+ext.include_in_bom          = false
+ext.include_in_codecoverage = true
+ext.include_in_javadoc      = false
+
