--- a/galasa-parent/dev.galasa.framework.log4j2.bridge/build.gradle
+++ b/galasa-parent/dev.galasa.framework.log4j2.bridge/build.gradle
@@ -12,3 +12,17 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
 }
+
+// Note: These values are consumed by the parent build process
+// They indicate which packages of functionality this OSGi bundle should be delivered inside,
+// or referenced from.
+// The settings here are gathered together by the build process to create a release.yaml file 
+// which gathers-up all the packaging metadata about all the OSGi bundles in this component.
+ext.project_name=project.name
+ext.include_in_obr          = false
+ext.include_in_mvp          = false
+ext.include_in_isolated     = false
+ext.include_in_bom          = false
+ext.include_in_codecoverage = false
+ext.include_in_javadoc      = false
+
