--- a/galasa-parent/galasa-boot/build.gradle
+++ b/galasa-parent/galasa-boot/build.gradle
@@ -59,3 +59,17 @@ dependencies {
     bundleDependency project (':dev.galasa.framework.maven.repository.spi')
     
 }
+
+// Note: These values are consumed by the parent build process
+// They indicate which packages of functionality this OSGi bundle should be delivered inside,
+// or referenced from.
+// The settings here are gathered together by the build process to create a release.yaml file 
+// which gathers-up all the packaging metadata about all the OSGi bundles in this component.
+ext.project_name=project.name
+ext.include_in_obr          = false
+ext.include_in_mvp          = true
+ext.include_in_isolated     = false
+ext.include_in_bom          = false
+ext.include_in_codecoverage = true
+ext.include_in_javadoc      = false
+
